# Tucker_layers

./: CMakeLists.txt  README.md  config.cmake
hlslib/: CMakeLists.txt
hlslib/include/hlslib/xilinx/: Stream.h
include/: Compute.h  Config.h.in  MatrixMultiplication.h  TuckerConfig.h  TuckerLinear.h  TuckerLinearInternal.h  TuckerTypes.h
kernel/: Compute.cpp  Memory.cpp  Top.cpp  TuckerLinear.cpp  Tucker_imp
test/: TestTuckerSimulation.cpp
